# rust-duration

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: duration.rs  lib.rs
tests/: ui.rs
tests/trybuild/: bytes_fail.rs  bytes_fail.stderr  bytes_pass.rs  datetime_fail.rs  datetime_fail.stderr  datetime_pass.rs  duration_fail.rs  duration_fail.stderr  duration_pass.rs  fail.rs  fail.stderr  pass.rs
