[package]
name = "duration"
version = "0.1.1"
edition = "2024"
description = "A simple proc-macro that parses duration strings using humantime."
keywords = ["duration", "time", "proc-macro", "parse", "humantime"]
license = "MIT"
repository = "https://github.com/vilicvane/rust-duration"
documentation = "https://docs.rs/duration"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["parsing"] }
humantime = "2"

[dev-dependencies]
trybuild = "1"
