[package]
name = "lits"
version = "0.3.0"
edition = "2024"
description = "A proc-macro collection that parses human-readable literals at compile time."
keywords = ["proc-macro", "duration", "humantime", "bytes", "bytesize"]
license = "MIT"
repository = "https://github.com/vilicvane/rust-lits"
documentation = "https://docs.rs/lits"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["parsing"] }
humantime = { version = "2", optional = true }
bytesize = { version = "2", optional = true }

[dev-dependencies]
trybuild = "1"

[features]
default = ["humantime", "bytesize"]
humantime = ["dep:humantime"]
bytesize = ["dep:bytesize"]
